Source/WebCore/rendering/RenderLayerFilters.h
@@ -70,13 +70,15 @@ private:
     void notifyFinished(CachedResource&, const NetworkLoadMetrics&) final;
     void resetDirtySourceRect() { m_dirtySourceRect = LayoutRect(); }
     GraphicsContext* inputContext();
-    void allocateBackingStore(const GraphicsContext& targetContext);
+    void allocateBackingStoreIfNeeded(const GraphicsContext& targetContext);
 
     RenderLayer& m_layer;
 
     Vector<RefPtr<Element>> m_internalSVGReferences;
     Vector<CachedResourceHandle<CachedSVGDocument>> m_externalSVGReferences;
 
+    LayoutRect m_targetBoundingBox;
+    FloatRect m_filterRegion;
     RefPtr<ImageBuffer> m_sourceImage;
     RefPtr<CSSFilter> m_filter;
     LayoutRect m_dirtySourceRect;
